[package]
name = "ws-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ws = "0.9.2"
rand = "0.8.5"
shakmaty = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
url = "2.2.2"