[package]
name = "ws-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
rand = "0.8.5"
shakmaty = "0.20.0"
chrono = "0.4"